--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <service
-            android:name=".presentation.CarSpeedMonitorService"
+            android:name=".domain.services.CarSpeedMonitorService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="location" />
